@@ -454,6 +454,7 @@ public abstract class ReadCommand extends MonitorableImpl implements ReadQuery
                 {
                     String query = ReadCommand.this.toCQLString();
                     Tracing.trace("Scanned over {} tombstones for query {}; query aborted (see tombstone_failure_threshold)", failureThreshold, query);
+                    metric.tombstoneFailures.inc();
                     throw new TombstoneOverwhelmingException(tombstones, query, ReadCommand.this.metadata(), currentKey, clustering);
                 }
             }
@@ -471,6 +472,11 @@ public abstract class ReadCommand extends MonitorableImpl implements ReadQuery
                 {
                     String msg = String.format("Read %d live rows and %d tombstone cells for query %1.512s (see tombstone_warn_threshold)", liveRows, tombstones, ReadCommand.this.toCQLString());
                     ClientWarn.instance.warn(msg);
+                    if (tombstones < failureThreshold)
+                    {
+                        metric.tombstoneWarnings.inc();
+                    }
+
                     logger.warn(msg);
                 }
 
